fix: Layout changes when scrollbar appears

--- a/frontend/src/components/Layout/Layout.module.css
+++ b/frontend/src/components/Layout/Layout.module.css
@@ -3,7 +3,3 @@
   width: 100%;
   max-width: $mantine-breakpoint-lg;
 }
-
-.header {
-  width: 100vw;
-}
